[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package]
name = "rainmetal_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["default", "file_watcher", "bevy_remote"] }
bevy-inspector-egui = "0.28.1"
bevy_spatial = {  version = "0.10.0", features = ["kdtree"] }
bevy_dogoap = "0.4.0"
ron_asset_manager = "0.5.2"
serde = { version = "1.0.217", features = ["derive"] }
bevy_egui = "0.32.0"
num-traits = { version = "0.2.19", features = ["std"] }
rand = "0.8.5"
