[workspace]
members = ["./dogoap/crates/bevy_dogoap", "./dogoap/crates/dogoap", "./dogoap/crates/dogoap_macros", "demo"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.gold-release]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
codegen-units = 1
strip = true
lto = "fat"
panic = "abort"