[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["default", "file_watcher", "bevy_remote"] }
bevy-inspector-egui = "0.28.1"
bevy_spatial = {  version = "0.10.0", features = ["kdtree"] }
ron_asset_manager = "0.5.2"
serde = { version = "1.0.217", features = ["derive"] }
num-traits = { version = "0.2.19", features = ["std"] }
rand = "0.8.5"
rainmetal_goap = { path = "../goap/rainmetal_goap" }